[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "self-healing-agent"
version = "0.1.0"
description = "Production-governed self-healing agent for SRE workflows (LangGraph/LangChain)."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Proprietary" }
authors = [
  { name = "Pradipta Basu" }
]
keywords = ["sre", "agent", "langgraph", "langchain", "self-healing", "observability", "governance"]

# Core runtime dependencies
# - LangGraph: state machine / control plane
# - LangChain: LLM/SLM + tooling abstractions
# - Provider SDKs + LangChain integrations for Claude/OpenAI/Gemini
# - Common production utilities: config, structured logs, CLI, retries

dependencies = [
  "langgraph==1.0.10",
  "langchain>=1.2,<1.3",
  "langchain-core>=1.2,<1.3",

  # LLM provider SDKs
  "anthropic>=0.40.0",
  "openai>=1.50.0",
  "google-genai>=1.0.0",

  # LangChain provider integrations
  "langchain-anthropic>=0.3.0",
  "langchain-openai>=0.2.0",
  "langchain-google-genai>=2.0.0",

  # Config + serialization
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "PyYAML>=6.0.2",
  "python-dotenv>=1.0.1",

  # Reliability primitives
  "tenacity>=9.0.0",

  # Database
  "psycopg2-binary>=2.9.0",

  # Observability / logging
  "structlog>=24.4.0",
  "rich>=13.8.0",

  # CLI
  "typer>=0.12.5",
  # API server
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
]

[project.urls]
Homepage = "https://github.com/your-org/self-healing-agent"
Repository = "https://github.com/your-org/self-healing-agent"

[project.scripts]
self-healing-agent = "self_healing_agent.cli.main:main"
sha = "self_healing_agent.cli.main:main"

# Optional extras:
# - "slm" is for local/small models used for simple jobs like classification.
# - "dev" is for testing/linting/type-check.

[project.optional-dependencies]
slm = [
  "transformers>=4.45.0",
  "accelerate>=0.34.0",
  "torch>=2.4.0",
]

dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "pytest-xdist>=3.8.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "types-PyYAML>=6.0.12.20240808",
]

[tool.hatch.build]
include = [
  "src/self_healing_agent/**",
  "configs/**",
  "docs/**",
  "README.md",
  "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/self_healing_agent"]

[tool.hatch.build.targets.sdist]
include = [
  "src/**",
  "configs/**",
  "docs/**",
  "tests/**",
  "README.md",
  "LICENSE",
  "pyproject.toml",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true
strict_optional = true
check_untyped_defs = true
